--- a/index.html
+++ b/index.html
@@ -3,15 +3,33 @@
 <html>
 
 <head>
-    <title>My first website</title>
+    <title>Broken Page</title>
 </head>
-<body>
-    <h1>Hatdog</h1>
-    <h2>Hatdog</h2>
-    <h3>Hatdog</h3>
-    <h4>Hatdog</h4>
-    <h5>Hatdog</h5>
-    <h6>Hatdog</h6>
+<body style="margin: 0px; font-family: Arial, sans-serif;">
+<header style="background-color: #333; color: white; padding: 20px; text-align: center;">
+   <h1 style="color: #fff; font-size: 30px;">My Website</h1>
+</header>
+<nav style="background: #555; padding: 10px;">
+    <ul style = "list-style: none; padding-left: 0; text-align: center;">
+    <li style="display: inline-block; margin-right: 15px;">
+        <a href="#" style="color: white; text-decoration: none;">Home</a>
+    </li>
+    <li style="display: inline; margin-right: 15px;">
+        <a href="#" style="color: white; text-decoration: none;">About</a>
+    </li>
+    </ul>
+</nav>
+
+<section style="width: 80%; margin:auto; padding: 20px;">
+    <p style="font-size: 18px; line-height: 1.6; color: #222;">
+        Welcome to my website! This text should be properly styled.
+    </p>
+</section>
+<footer style="background-color: #333; color: white; text-align: center; padding: 15px;">
+    &copy; 2025 My Website
+</footer>
+
 </body>
 
-</html>
+</html
+
